# spotify-client-rs

./: Cargo.toml  README.md  config.toml
src/: config.rs  data.rs  main.rs  spotify.rs
