[package]
name = "spotify-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.5"
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[dev-dependencies]
rusty-hook = "^0.11.2"